--- a/contracts/.gitignore
+++ b/contracts/.gitignore
@@ -5,7 +5,7 @@ out/
 # Ignores development broadcast logs
 !/broadcast
 /broadcast/*/31337/
-/broadcast/**/dry-run/
+/broadcast/**/
 
 # Docs
 docs/
