--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,9 +21,8 @@
     "clsx": "^2.1.1",
     "ethers": "^5.7.2",
     "lucide-react": "^0.487.0",
-    "next": "^15.2.4",
+    "next": "15.1.7",
     "next-themes": "^0.4.6",
-    "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
